--- a/packages/json-tools/package.json
+++ b/packages/json-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rschedule/json-tools",
-  "version": "0.0.1",
+  "version": "0.7.1-beta.0",
   "description": "Utility functions for parsing/serializing rSchedule objects in JSON format.",
   "author": "John Carroll <john.carroll.p@gmail.com>",
   "homepage": "https://gitlab.com/john.carroll.p/rschedule",
