--- a/packages/rschedule/package.json
+++ b/packages/rschedule/package.json
@@ -35,11 +35,12 @@
     "prepublish": "yarn build"
   },
   "dependencies": {
+    "@rschedule/ical-tools": "^0.0.1",
+    "date-fns": "^1.30.1",
     "lodash.clonedeep": "^4.5.0",
     "lodash.sorteduniq": "^4.2.0",
     "lodash.uniq": "^4.5.0",
-    "lodash.uniqwith": "^4.5.0",
-    "@rschedule/ical-tools": "^0.0.1"
+    "lodash.uniqwith": "^4.5.0"
   },
   "devDependencies": {
     "typescript": "^2.9.1"
