--- a/packages/rschedule/package.json
+++ b/packages/rschedule/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rschedule/rschedule",
-  "version": "0.5.6-alpha.23+af12c78",
+  "version": "0.6.2",
   "description": "A typescript library for working with recurring dates and events.",
   "author": "John Carroll <john.carroll.p@gmail.com>",
   "homepage": "https://gitlab.com/john.carroll.p/rschedule",
