--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:prod": "yarn lint && yarn test --coverage --no-cache",
     "format": "prettier-tslint fix packages/**/src/**/**/**/**/*.ts tests/**/**/**/**/**/*.ts",
     "clean": "yarn clean:build && yarn clean:modules",
-    "clean:build": "trash packages/*/build",
+    "clean:build": "trash packages/*/build node_modules/@rschedule",
     "clean:modules": "trash yarn.lock node_modules packages/*/node_modules"
   },
   "devDependencies": {
