--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,18 @@
 stages:
-  - test
+  - test_1
+  - test_2
+  - test_3
+  - test_4
+  - test_5
+  - test_6
+  - test_7
+  - test_8
+  - test_9
   - dependency_scanning
 
 test_1:
   image: node:8.15.1-alpine
-  stage: test
+  stage: test_1
   cache:
     paths:
       - node_modules/
@@ -19,7 +27,7 @@ test_1:
 
 test_2:
   image: node:8.15.1-alpine
-  stage: test
+  stage: test_2
   cache:
     paths:
       - node_modules/
@@ -34,7 +42,7 @@ test_2:
 
 test_3:
   image: node:8.15.1-alpine
-  stage: test
+  stage: test_3
   cache:
     paths:
       - node_modules/
@@ -49,7 +57,7 @@ test_3:
 
 test_4:
   image: node:8.15.1-alpine
-  stage: test
+  stage: test_4
   cache:
     paths:
       - node_modules/
@@ -64,7 +72,7 @@ test_4:
 
 test_5:
   image: node:8.15.1-alpine
-  stage: test
+  stage: test_5
   cache:
     paths:
       - node_modules/
@@ -79,7 +87,7 @@ test_5:
 
 test_6:
   image: node:8.15.1-alpine
-  stage: test
+  stage: test_6
   cache:
     paths:
       - node_modules/
@@ -94,7 +102,7 @@ test_6:
 
 test_7:
   image: node:8.15.1-alpine
-  stage: test
+  stage: test_7
   cache:
     paths:
       - node_modules/
@@ -109,7 +117,7 @@ test_7:
 
 test_8:
   image: node:8.15.1-alpine
-  stage: test
+  stage: test_8
   cache:
     paths:
       - node_modules/
@@ -124,7 +132,7 @@ test_8:
 
 test_9:
   image: node:8.15.1-alpine
-  stage: test
+  stage: test_9
   cache:
     paths:
       - node_modules/
