--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,10 @@
 stages:
-  - test_1
-  - test_2
-  - test_3
-  - test_4
-  - test_5
-  - test_6
-  - test_7
-  - test_8
-  - test_9
+  - test
   - dependency_scanning
 
 test_1:
   image: node:8.15.1-alpine
-  stage: test_1
+  stage: test
   cache:
     paths:
       - node_modules/
@@ -27,7 +19,7 @@ test_1:
 
 test_2:
   image: node:8.15.1-alpine
-  stage: test_2
+  stage: test
   cache:
     paths:
       - node_modules/
@@ -42,7 +34,7 @@ test_2:
 
 test_3:
   image: node:8.15.1-alpine
-  stage: test_3
+  stage: test
   cache:
     paths:
       - node_modules/
@@ -57,7 +49,7 @@ test_3:
 
 test_4:
   image: node:8.15.1-alpine
-  stage: test_4
+  stage: test
   cache:
     paths:
       - node_modules/
@@ -72,7 +64,7 @@ test_4:
 
 test_5:
   image: node:8.15.1-alpine
-  stage: test_5
+  stage: test
   cache:
     paths:
       - node_modules/
@@ -87,7 +79,7 @@ test_5:
 
 test_6:
   image: node:8.15.1-alpine
-  stage: test_6
+  stage: test
   cache:
     paths:
       - node_modules/
@@ -102,7 +94,7 @@ test_6:
 
 test_7:
   image: node:8.15.1-alpine
-  stage: test_7
+  stage: test
   cache:
     paths:
       - node_modules/
@@ -117,7 +109,7 @@ test_7:
 
 test_8:
   image: node:8.15.1-alpine
-  stage: test_8
+  stage: test
   cache:
     paths:
       - node_modules/
@@ -132,7 +124,7 @@ test_8:
 
 test_9:
   image: node:8.15.1-alpine
-  stage: test_9
+  stage: test
   cache:
     paths:
       - node_modules/
