--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build:moment-tz-date-adapter": "yarn --cwd='./packages/moment-tz-date-adapter' build",
     "build:json-tools": "yarn --cwd='./packages/json-tools' build",
     "build:ical-tools": "yarn --cwd='./packages/ical-tools' build",
+    "build:rule-tools": "yarn --cwd='./packages/rule-tools' build",
     "test": "jest --config './jest.config.json'",
     "test:watch": "jest --config './jest.config.json' --watch",
     "test:prod": "yarn lint && yarn test --coverage --no-cache",
@@ -24,25 +25,24 @@
     "clean:modules": "trash yarn.lock node_modules packages/*/node_modules"
   },
   "devDependencies": {
-    "@types/jest": "^22.0.0",
+    "@types/jest": "^24.0.0",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/luxon": "^1.2.2",
     "@types/moment": "^2.13.0",
     "@types/moment-timezone": "^0.5.7",
     "@types/node": "^10.0.3",
-    "jest": "^22.0.2",
-    "jest-cli": "^23.6.0",
+    "jest": "^24.0.0",
+    "jest-cli": "^24.0.0",
     "lerna": "^3.0.1",
+    "ical.js": "^1.3.0",
     "luxon": "^1.3.3",
     "moment": "^2.0.0",
     "moment-timezone": "^0.5.21",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.15.3",
     "prettier-tslint": "^0.4.1",
-    "rollup": "^1.7.4",
-    "rollup-plugin-typescript": "^1.0.1",
     "trash-cli": "^1.4.0",
-    "ts-jest": "^22.0.0",
+    "ts-jest": "^24.0.0",
     "ts-node": "^6.0.0",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
