--- a/packages/rule-tools/package.json
+++ b/packages/rule-tools/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@rschedule/ical-tools",
+  "name": "@rschedule/rule-tools",
   "version": "0.10.0",
-  "description": "Utility functions for parsing/serializing rSchedule objects in iCalendar format.",
+  "description": "Utility functions for manipulating rSchedule Rule objects.",
   "author": "John Carroll <john.carroll.p@gmail.com>",
   "homepage": "https://gitlab.com/john.carroll.p/rschedule",
   "bugs": "https://gitlab.com/john.carroll.p/rschedule/issues",
@@ -14,11 +14,13 @@
     "rschedule",
     "javascript",
     "typescript",
-    "icalendar",
-    "rfc"
+    "events",
+    "dates",
+    "recurring",
+    "recurrences"
   ],
   "main": "build/main.js",
-  "typings": "build/packages/ical-tools/index.d.ts",
+  "typings": "build/packages/rule-tools/index.d.ts",
   "module": "build/module.js",
   "engines": {
     "node": ">=8.9"
@@ -28,8 +30,7 @@
     "clean:build": "rm -rf build && rm -rf .rpt2_cache"
   },
   "peerDependencies": {
-    "@rschedule/rschedule": "^0.10.0",
-    "ical.js": "^1.3.0"
+    "@rschedule/rschedule": "^0.10.0"
   },
   "devDependencies": {
     "rollup": "^1.7.4",
