--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "inlineSourceMap": true,
     "removeComments": false,
     "downlevelIteration": true,
+    "stripInternal": true,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
   },
   "include": ["packages", "tests"],
